# Actix_restApis

./: actix_set.sh  setup.sh
Astronomy-api/: Cargo.toml
Bank-management-Api/: Cargo.toml
Crypto-Api/: Cargo.toml
Digital-wallet_Api/: Cargo.toml
E-commerce_Api/: Cargo.toml
Hospital-management-Api/: Cargo.toml
Netflix-clone-api/: Cargo.toml
Property-rental-api/: Cargo.toml
Stock-trading-api/: Cargo.toml
TodoApi/: Cargo.toml
TodoApi/src/: main.rs
University-management-api/: Cargo.toml
Vehicle-reservation_Api/: Cargo.toml
X-clone-api/: Cargo.toml
cloud-storage-api/: Cargo.toml
instagram-clone-api/: Cargo.toml
online-delivery-api/: Cargo.toml
