[package]
name = "E-commerce_Api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "postgres", "mysql"] }
dotenvy = "0.15"
base64ct = "=1.5.0"
